--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ github.sha }}
-          release_name: Release v${{ github.sha }}
+          release_name: Release ${{ steps.date.outputs.date }}-${{ github.repository }}
           draft: false
           prerelease: false
 
